<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="#FFFFFF">

    <include layout="@layout/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_extra"/>
        
    <include android:id="@+id/menu_extra"
    layout="@layout/menu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header_extra"
        android:layout_above="@id/menu_extra">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/extra_button_youtube"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_button"
                android:text="@string/youtube_channel"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:drawableRight="@drawable/youtube"
                android:gravity="left|center_vertical"
                android:onClick="youtube_onClick"/>

            <Button
                android:id="@+id/extra_button_facebook"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="MG Facebook"
                android:padding="10dp"
                android:background="@drawable/gray_button"
                android:textColor="@android:color/black"
                android:drawableRight="@drawable/fb_logo"
                android:gravity="left|center_vertical"
                android:onClick="fb_onClick"/>

            <Button
                android:id="@+id/extra_button_biennial"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/biennial"
                android:padding="10dp"
                android:background="@drawable/gray_button"
                android:textColor="@android:color/black"
                android:drawableRight="@drawable/link_icon"
                android:gravity="left|center_vertical"
                android:onClick="biennial_onClick"/>

            <Button
                android:id="@+id/extra_button_biennialFb"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/biennialFB"
                android:padding="10dp"
                android:background="@drawable/gray_button"
                android:textColor="@android:color/black"
                android:drawableRight="@drawable/fb_logo"
                android:gravity="left|center_vertical"
                android:onClick="biennialFb_onClick"/>

            <Button
                android:id="@+id/extra_button_calendar"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_button"
                android:text="@string/calendar"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:gravity="left|center_vertical"
                android:onClick="calendar_onClick"/>

            <Button
                android:id="@+id/extra_button_notifications"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_button"
                android:text="@string/notification_management"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:gravity="left|center_vertical"
                android:onClick="notif_onClick"/>

            <Button
                android:id="@+id/extra_button_authors"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/gray_button"
                android:text="@string/authors"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:gravity="left|center_vertical"
                android:onClick="authors_onClick"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
